add-tutorial-link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- 
     flexbox template html template 
     Version: .0.001
+    tutorial url: https://www.mongodb.com/languages/mern-stack-tutorial
 -->
   
