bare bones for html flexbox template index.htm file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!-- 
-    flexbox template html template 
+    flexbox html template 
     Version: .0.001
     tutorial url: https://www.mongodb.com/languages/mern-stack-tutorial
 -->
-  
+<!DOCTYPE html>
+<html lang="eng">
+<head>
+<meta charset="utf-8">
+<title>Flexbox Template</title>
+<!-- Headings="Quicksand" Medium(font-weight=500), body="Quicksand" light(font-weight=300), Monospace=""Cutive Mono"-->
+<link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Quicksand:wght@300;600&display=swap" rel="stylesheet">
+  <!-- Font-Awesome -->
+  <script src="https://kit.fontawesome.com/f70e296346.js" crossorigin="anonymous"></script>
+</head>
+<body>
+
+</body>
+</html>
