bare-bones html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,138 @@
 <html lang="eng">
 <head>
 <meta charset="utf-8">
-<title>Flexbox Template</title>
-<!-- Headings="Quicksand" Medium(font-weight=500), body="Quicksand" light(font-weight=300), Monospace=""Cutive Mono"-->
-<link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Quicksand:wght@300;600&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Responsive Template</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital@0;1&family=Fraunces:ital,opsz,wght@0,9..144,100;0,9..144,200;0,9..144,300;0,9..144,400;0,9..144,500;0,9..144,600;1,9..144,100;1,9..144,200;1,9..144,300;1,9..144,400&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
   <!-- Font-Awesome -->
   <script src="https://kit.fontawesome.com/f70e296346.js" crossorigin="anonymous"></script>
+
+  <!-- Custom Styles -->
+  <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <header>
+    <div class="site-branding">
+      <div class="site-logo">
+        <!-- logo image -->
+      </div>
+      <div class="site-title-description"><h1>
+          <a href="#" class="site-title">Flexbox Template</a></h1>
+        <p class="description">Creating a responsive HTML Template.</p>
+      </div>
+    </div>
+
+    <div class="btn-wrapper">
+      <a href="#" class="log">Login</a>
+      <a href="#" class="sign">Sign up</a>
+    </div>
+</header>
+
+<nav>
+<a href="index.html">Home</a>
+<a href="intro.html">Introduction</a>
+<a href="queries.html">Media Queries</a>
+<a href="internationalization.html">Internationalization</a>
+<a href="macro.html">Macro Layouts</a>
+<a href="micro.html">Micro Layout</a>
+<a href="typography.html">Typography</a>
+<a href="images.html">Images</a>
+<a href="picture.html">Picture Element</a>
+<a href="icons.html">Icons</a>
+<a href="theme.html">Theming</a>
+<a href="accessibility.html">Accessibility</a>
+<a href="interaction.html">Interaction</a>
+<a href="patterns.html">User Interface Patterns</a>
+<a href="features.html">Media Features</a>
+<a href="screen.html">Screen Configurations</a>
+<a href="conclustion.html">Conclusion</a>
+</nav>
+
+<main>
+<article>
+  <h2>Welcome!</h2>
+</article>
+
+<aside>
+<p><strong>On this page:</strong></p>
+</aside>
+
+  <article>
+  <h3>Another Article Here</h3>
+</article>
+
+<aside>
+<p><strong>On this page:</strong></p>
+</aside>
+
+</main>
+
+<footer>
+<div id="footer-wrapper">
+  <div>
+    <h4>Reference</h4>
+  </div>
+  
+  <div>
+    <h4>How Do I?</h4>
+  </div>
+  
+  <div>
+    <h4>Tutorials</h4>
+  </div>
+  
+  <div>
+    <h4>Best Practice</h4>
+  </div>
+  
+  <div>
+    <h4>Testing</h4>
+  </div>
+  
+  <div>
+    <h4>Tools</h4>
+  </div>
+  
+</div>
+
+<div id="site-terms">
+  <div>
+    <h5>About</h5>
+  </div>
+  
+  <div>
+    <h5>Terms of Use</h5>
+  </div>
+  
+  <div>
+    <h5>Privacy</h5>
+  </div>
+  
+  <div>
+    <h5>Cookies</h5>
+  </div>
+  
+  <div>
+    <h5>Accessibility</h5>
+  </div>
+  
+</div>
+
+<div id="copyright">
+  <p><small>Copyright &copy; 2023 Wendy woz 'ere!</small></p>
+</div>
+
+<div class="social">
+  <!--  My social links  -->
+
+</div>
+
+</footer>
+
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
