--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://kit.fontawesome.com/f70e296346.js" crossorigin="anonymous"></script>
 
   <!-- Custom Styles -->
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
@@ -86,7 +86,7 @@
   </div>
   
   <div>
-    <h4>Tutorials</h4>
+    <h4>Guides</h4>
   </div>
   
   <div>
@@ -105,7 +105,7 @@
 
 <div id="site-terms">
   <div>
-    <h5>About</h5>
+    <h5>About Us</h5>
   </div>
   
   <div>
@@ -113,15 +113,15 @@
   </div>
   
   <div>
-    <h5>Privacy</h5>
+    <h5>Privacy Policy</h5>
   </div>
   
   <div>
-    <h5>Cookies</h5>
+    <h5>Cookie Policy</h5>
   </div>
   
   <div>
-    <h5>Accessibility</h5>
+    <h5>Accessibility Policy</h5>
   </div>
   
 </div>
